# wish

./: .gitignore  Build.PL  MANIFEST  Makefile.am  README  configure.ac  wdic  wish.pl
Wish/: Edict2.pm  KanjiDic.pm
lib/Wish/: Edict2.pm  Unicode.pm
static/: wish.scss
t/: edict2.sample  edict2.t  fcgi.t  kanji.t  kanjidic.sample  kanjidic.t  unicode.t  wdic.t  word.t
